--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,7 @@
-.leftspace {
-	padding-left: 0px;
-}
+
 
 body {
-	font-family: "Arial",Arial,sans-seriff;
+	font-family: 'Montserrat', sans-serif;
 	margin: 20px;
 
 }
@@ -13,7 +11,7 @@ nav{
 	margin-bottom: 10px;
 }
 
-img{
+.curveEdges{
 	border-radius:10%;
 	width:400px;
 }
@@ -21,14 +19,21 @@ img{
 h1{
 	font-size:50px;
 	margin:5px;
-	color:#800020;
+	color:navy;
+	margin-left: 0px;
 }
 
 h3 {
-	color:pink;
+	color:purple;
 }
 
-a {
+a:link {
 	text-decoration: none;
 	padding:10px;
+	padding-left: 0px;
+	color:purple;
+}
+
+a:hover {
+	color:pink;
 }
